Revert nav to relative positioning - fix gap issues
- Revert masthead from position:fixed to position:relative
- Remove body padding-top:56px (was for fixed nav)
- Restore original #main margin-top:2em
- Restore original sidebar and archive styles
- Restore .sticky top:2em
- Update animation to use full viewport (no nav offset)

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -3,9 +3,7 @@
    ========================================================================== */
 
 .archive {
-  margin-top: 0 !important;
   margin-bottom: 2em;
-  padding-top: 0 !important;
 
   @include breakpoint($medium) {
     @include span(12 of 12);
@@ -14,11 +12,6 @@
   @include breakpoint($large) {
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
-  }
-
-  h1.page__title:first-child {
-    margin-top: 0 !important;
-    padding-top: 0 !important;
   }
 
   a {
