--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  padding-top: 56px; /* Account for fixed navigation */
   padding-bottom: 9em;
   color: $text-color;
   font-family: $global-font-family;
