--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,18 +5,14 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 0 !important;
-  padding-top: 0 !important;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
+  margin-top: 2em;
+  padding-left: 1em;
+  padding-right: 1em;
+  animation: intro 0.3s both;
+  animation-delay: 0.35s;
 
   @include breakpoint($x-large) {
     max-width: $x-large;
-  }
-
-  // Ensure first child elements have no top margin
-  > *:first-child {
-    margin-top: 0 !important;
   }
 }
 
